# Mypy-Github-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.json  clone-test.py  pyproject.toml  requirements.txt
app/: __main__.py  config.py  git_operations.py  main.py  mypy_adapter.py
tests/: conftest.py  test_config.py  test_mypy_adapter.py
webservice/: __main__.py
