[tool.poetry]
name = "mypy-github-bot"
version = "0.1.0"
description = ""
authors = ["Patryk Galczynski <galczynski.patryk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "~3.6.2"
gidgethub = "~4.1.0"
PyJWT = "~1.7.1"
cryptography = "~2.9.2"
cachetools = "~4.1.0"
gitpython = "~3.1.2"
mypy = "~0.770"
unidiff = "~0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
aiohttp-devtools = "0.*"
flake8 = "^3.8.2"
black = "^19.10b0"
isort = {version = "^4.3.21", extras = ["pyproject"]}
pytest-mock = "^3.1.1"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
env = ["GH_SECRET=mock-gh-secret"]

[tool.mypy-bot]
starting_points = ["app/main.py"]
additional_mypy_opts = "--ignore-missing-imports --strict-equality"

[mypy]
python_version = 3.8
ignore_missing_imports = true

